--- a/quarkus-weather-war/src/main/resources/META-INF/resources/index.html
+++ b/quarkus-weather-war/src/main/resources/META-INF/resources/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Quarkus Weather</title>
+    <title>Quarkus Weather (WAR)</title>
 </head>
 <body>
-<h1>Quarkus Weather</h1>
+<h1>Quarkus Weather (WAR)</h1>
 </body>
 </html>
